[project]
name = "restorify"
version = "1.0.2"
authors = [
  { name="tntnkn", email="anton@tonotonokon.com" },
]
description = "Type-safe and eazy json-to-object-and-back conversions."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/tntnkn/restorify"
Issues = "https://github.com/tntnkn/restorify/issues"

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"
